@@ -66,7 +66,7 @@ Q_OBJECT
 		/*! Add a new TDownloadVideoItem */
 		VideoItem* addVideo(const QString URL);
 		/*! Add a new TDownloadVideoItem with an overrided Conversion configuration */
-		VideoItem* addVideo(const QString URL, const VideoConversionConfig videoConversionConfig);
+		VideoItem* addVideo(const QString URL, const OverridedVideoConversionConfig overridedConversionConfig);
 		/*! Add a Stored TDownloadVideoItem */
 		VideoItem* addVideo(VideoItem *videoItem);
 		/*! Delete by Index an existent TDownloadVideoItem */
